# recorrencia_de_queimadas

./: .gitignore  RMC_Municipios_2024.geojson  analise_queimadas_rmc.py  app.py  app_fastapi.py  interactive_maps.py  mapa_recorrencia_queimadas.R  pyproject.toml  requirements.txt
resultados/: focos_por_grid.csv  focos_por_municipio.csv
templates/: index.html
